syntax = "proto3";
package google.internal.antigravity;

// 根消息 - 用户状态 (兼容 SessionResponse)
// 注意：大多数字段使用 bytes 以避免 wire type 错误
message SessionResponse {
  bytes field_5 = 5;                      // 原 int32，改为 bytes
  AuthInfo auth = 6;                      // 认证配置 (已验证可用)
  bytes field_7 = 7;
  bytes field_9 = 9;
  bytes field_10 = 10;                    // sessions (保留为 bytes)
  bytes field_11 = 11;                    // ui_config (保留为 bytes)
  bytes field_15 = 15;
  bytes field_16 = 16;
  bytes field_17 = 17;                    // artifacts (保留为 bytes)
  bytes f18 = 18;
  UserContext context = 19;               // 应用配置 (已验证可用)
  Subscription subscription = 36;         // 订阅信息
}

// 认证配置
message AuthInfo {
  string access_token = 1;     // OAuth access token
  string token_type = 2;       // "Bearer"
  string refresh_token = 3;    // OAuth refresh token
  Timestamp created_at = 4;    // 创建时间
}

// 时间戳
message Timestamp {
  int64 seconds = 1;  // Unix 时间戳秒数
}

// 某个标志消息
message SomeFlag {
  int32 value = 1;
}

// 会话记录
message SessionRecord {
  string session_id = 1;           // UUID 格式
  SessionTimestamp timestamp = 2;  // 时间戳
}

message SessionTimestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// UI 配置
message UIConfig {
  int32 field_1 = 1;
  int32 field_2 = 2;
}

// Artifact 文件
message Artifact {
  string path = 1;             // 文件路径
  ArtifactMeta meta = 2;       // 元数据
}

message ArtifactMeta {
  int32 type = 1;              // 类型
  string description = 2;      // 描述
  Timestamp timestamp = 4;     // 时间戳
  int32 status = 5;            // 状态
}

// 用户上下文
message UserContext {
  int32 status = 2;
  string plan_name = 3;
  string email = 7;
  AppConfig models = 33;        // 模型配置
  Subscription plan = 36;       // 订阅计划
}

// 应用配置
message AppConfig {
  repeated ModelConfig items = 1;          // 模型配置列表
  RecommendedModels recommended = 2;       // 推荐模型
  DefaultModel default_model = 3;          // 默认模型
}

// 模型配置
message ModelConfig {
  string name = 1;                         // 模型名称
  ModelId id = 2;                          // 模型 ID
  int32 field_5 = 5;                       // 某个标志
  int32 field_11 = 11;                     // 某个标志
  ModelMeta meta = 15;                     // 模型元数据
  string tag = 16;                         // 标签 (如 "New")
  repeated MimeTypeSupport supported_types = 18;  // 支持的 MIME 类型
}

message ModelId {
  int32 id = 1;
}

message ModelMeta {
  float rate_limit = 1;        // 速率限制相关
  MetaTimestamp timestamp = 2;
}

message MetaTimestamp {
  int64 value = 1;
}

// MIME 类型支持
message MimeTypeSupport {
  string mime_type = 1;        // MIME 类型
  int32 enabled = 2;           // 是否启用
}

// 推荐模型
message RecommendedModels {
  string category = 1;                  // 分类名称 "Recommended"
  RecommendedList list = 2;             // 推荐列表
}

message RecommendedList {
  repeated string model_names = 2;      // 模型名称列表
}

// 默认模型
message DefaultModel {
  ModelId model = 1;
}

// 订阅信息
message Subscription {
  string tier_id = 1;           // "g1-pro-tier"
  string tier_name = 2;         // "Google AI Pro"
  string display_name = 3;      // "Google AI Pro"
  string upgrade_url = 7;       // 升级链接
  string upgrade_message = 8;   // 升级提示信息
}
